Configuraciones estéticas, configuración de los componentes proyectos, experiencia, educación y todos sus new y edit

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,7 +4,7 @@
 
         <div class="col-10 col-sm-6 col-lg-5">
             <!-- Título -->
-            <h2 class="text-center py-2 pb-3 text-white titulo text-shadow">Contacto</h2>
+            <h2 class="apartado text-white text-shadow pb-3 pt-2 text-center">Contacto</h2>
 
             <!-- Row -->
             <div class="row p-0 m-0 fs-6">
