--- a/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
@@ -20,43 +20,11 @@
 
         <!--Secciones-->
         <div class="col col-sm-10 col-lg-11 text-white justify-content-center pt-3 pt-lg-5 pb-5 m-0">
-
-            <!-- <app-experiencia></app-experiencia> --> 
             
-            <!--Row Proyectos-->
-            <div class="row mx-0 px-lg-2 pb-5">
+            <app-proyectos></app-proyectos>
 
-                <h2 class="pb-2 border-bottom apartado">Proyectos</h2>
+            <app-experiencia></app-experiencia> 
             
-                <div class="row px-0 mx-0 justify-content-center pt-3  justify-content-sm-start gap-2 gap-lg-3">
-            
-                    <div class="col-auto  col-sm-5 col-md-4 col-lg-3 text-center  card-proyecto p-1 texto">
-                        <div class="card-image">
-                            <img src=".\assets\images\cozydesk.jpg" class="card-img-top" width="100%" height="50%" >
-                        </div>
-    
-                        <div class="card-body p-0 text-white">
-                            <h5 class="pt-2 subtitulo">Nombre del Proyecto</h5>
-                            <p class="card-text mb-0 pb-2">Descripción corta del proyecto</p>
-                            <p class="card-text pb-2">00/00/0000</p>
-                        </div>
-
-
-                        <div class="abs-center">
-                            <button class="btn-medium  p-1">
-                                Ver Proyecto
-                            </button>
-                            <button class="btn-medium p-1 " >
-                                <i class="fa-brands fa-github p-1"></i>Ver Código
-                            </button>
-                        </div>
-                    </div> 
-             
-
-                    
-
-                </div> 
-            </div>
         </div>
 
     </div>
