--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -5,8 +5,7 @@ textarea{resize: none;}
 .contact-section{height: 81vh;}
 
 .form-control{
-    box-shadow: 0px 1px 4px var(--dark);
-    border: 2px solid var(--light);}
+    border: 2px solid var(--celesteclaro);}
 
 input{
     padding: 0%;
