--- a/src/app/components/experiencia-y-proyectos/experiencia/edit-experiencia.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia/edit-experiencia.component.html
@@ -1,15 +1,28 @@
 <div class="container-fluid abs-center editSection" *ngIf="expLab">
     <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
-        <div class="form-group pb-2">
-            <label for="nombreE">Nombre de la empresa</label>
-            <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="nombreE" name="nombreE" placeholder="Nombre de la Experiencia" [(ngModel)]="expLab.nombreE" required>
+            <label for="nombreE"  class="text-muted">Nombre de la Experiencia</label>
         </div>
-        <div class="form-group pb-3">
-            <label for="descripcionE">Descripcion de la tarea</label>
-            <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="descripcionE" name="descripcionE" placeholder="Descripción de la Experiencia" [(ngModel)]="expLab.descripcionE" required>
+            <label for="descripcionE"  class="text-muted">Descripción de la Experiencia</label>
         </div>
-        <button class="btn-medium py-2 p-3">
-            Editar experiencia
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="fechaE" name="fechaE" placeholder="Periodo de la Experiencia" [(ngModel)]="expLab.fechaE" required>
+            <label for="fechaE"  class="text-muted">Periodo de la Experiencia</label>
+        </div>
+      
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="imgE" name="imgE" placeholder="Imagen de la Experiencia" [(ngModel)]="expLab.imgE" required>
+            <label for="imgE"  class="text-muted">Imagen Experiencia</label>
+        </div>
+
+        <button class="btn-medium py-2 px-3">
+            Actualizar Experiencia
         </button>
     </form>
 </div>
