--- a/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.css
@@ -1,7 +1,19 @@
 /*Card Trabajo*/
 .card-trabajo{
-    background-color:#a99b94a7;
-    border-radius: 1rem;}
-/*Hover Trabajo*/
-.card-trabajo:hover, .card-proyecto:hover{
-    background-color: #167e8c5f;}
+    background-color:var(--gris);
+    border-radius: 0.3rem;
+    /* min-height: 20vh; */
+}
+
+/*Hover de las Card Educación*/
+.card-trabajo:hover{
+    background-color:var(--magenta);
+}
+.accordion-item, .accordion-button{
+    background: none;
+    background-color: transparent;
+    outline: none;
+    border: none;
+
+}
+
