--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,8 +18,8 @@
 
     </div>
 
-    <div class="d-flex justify-content-end align-content-end credits ">
-        <a class="text-white px-2 py-0 gtexto" routerLink="/Creditos">Créditos
+    <div class="d-flex justify-content-end align-content-end credits">
+        <a class="px-2 py-0 gtexto" routerLink="/Creditos">Créditos
             <i class="fs-6 fa-solid fa-icons px-1 py-0"></i>
         </a>
     </div>
