--- a/src/app/components/info/educacion/editeducacion.component.html
+++ b/src/app/components/info/educacion/editeducacion.component.html
@@ -1,15 +1,23 @@
 <div class="container-fluid abs-center editSection" *ngIf="educacion">
-    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-11 col-lg-5">
-        <div class="form-group pb-2">
-            <label for="nombreE" class="subtitulo">Nombre de la empresa</label>
-            <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="educacion.nombreE" required>
+    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="nombreE" name="nombreE" placeholder="Nombre de la Educación" [(ngModel)]="educacion.nombreE" required>
+            <label for="nombreE"  class="text-muted">Nombre de la Educación</label>
         </div>
-        <div class="form-group pb-3">
-            <label for="descripcionE" class="subtitulo">Descripcion de la tarea</label>
-            <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="descripcionE" name="descripcionE" placeholder="Descripción de la Educación" [(ngModel)]="educacion.descripcionE" required>
+            <label for="descripcionE"  class="text-muted">Descripción de la Educación</label>
         </div>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="fechaE" name="fechaE" placeholder="Periodo de la Educación" [(ngModel)]="educacion.fechaE" required>
+            <label for="fechaE"  class="text-muted">Periodo de la Educación</label>
+        </div>
+
         <button class="btn-medium py-2 px-3">
-            Editar Educación
+            Actualizar Educación
         </button>
     </form>
 </div>
