--- a/src/app/components/info/educacion/neweducacion.component.html
+++ b/src/app/components/info/educacion/neweducacion.component.html
@@ -1,13 +1,21 @@
-<div class="container-fluid editSection abs-center">
-    <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-11 col-lg-5">
-        <div class="form-group pb-2">
-            <label for="nombreE" class="subtitulo">Nombre de la institución</label>
-            <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
+<div class="container-fluid abs-center editSection">
+    <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="nombreE" name="nombreE" placeholder="Nombre de la Educación" [(ngModel)]="nombreE" required>
+            <label for="nombreE"  class="text-muted">Nombre de la Educación</label>
         </div>
-        <div class="form-group pb-3">
-            <label for="descripcionE" class="subtitulo">Título o certificado</label>
-            <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="descripcionE" name="descripcionE" placeholder="Descripción de la Educación" [(ngModel)]="descripcionE" required>
+            <label for="descripcionE"  class="text-muted">Descripción de la Educación</label>
         </div>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="fechaE" name="fechaE" placeholder="Periodo de la Educación" [(ngModel)]="fechaE" required>
+            <label for="fechaE"  class="text-muted">Periodo de la Educación</label>
+        </div>
+
         <button class="btn-medium py-2 px-3">
             Agregar Educación
         </button>
