--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -7,8 +7,7 @@
 }
 
 .form-control{
-    box-shadow: 0px 1px 4px var(--dark);
-    border: 2px solid var(--light);}
+    border: 2px solid var(--celesteclaro);}
 
 input{
     padding: 0%;
@@ -16,3 +15,4 @@ input{
 .form-floating{
     padding-bottom: 0.5em;
 }
+
