--- a/src/app/components/experiencia-y-proyectos/proyectos/new-proyecto.component.html
+++ b/src/app/components/experiencia-y-proyectos/proyectos/new-proyecto.component.html
@@ -1,29 +1,36 @@
 <div class="container-fluid abs-center editSection">
     <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
-        <div class="form-group pb-2">
-            <label for="nombreP">Nombre del proyecto</label>
-            <input type="text" class="form-control" id="nombreP" name="nombreP" [(ngModel)]="nombreP" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="nombreP" name="nombreP" placeholder="Nombre del Proyecto" [(ngModel)]="nombreP" required>
+            <label for="nombreP"  class="text-muted">Nombre del Proyecto</label>
         </div>
-        <div class="form-group pb-3">
-            <label for="descripcionP">Descripcion del proyecto</label>
-            <input type="text" class="form-control" id="descripcionP" name="descripcionP" [(ngModel)]="descripcionP" required>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="descripcionP" name="descripcionP" placeholder="Descripción del Proyecto" [(ngModel)]="descripcionP" required>
+            <label for="descripcionP"  class="text-muted">Descripción del Proyecto</label>
         </div>
-        <!-- <div class="form-group pb-2">
-            <label for="fechaP">Fecha del proyecto</label>
-            <input type="text" class="form-control" id="fechaP" name="fechaP" [(ngModel)]="fechaP" required>
-        </div> -->
-        <!-- <div class="form-group pb-2">
-            <label for="linkP">Link del proyecto</label>
-            <input type="text" class="form-control" id="linkP" name="linkP" [(ngModel)]="linkP">
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="fechaP" name="fechaP" placeholder="Fecha de creación del Proyecto" [(ngModel)]="fechaP" required>
+            <label for="fechaP"  class="text-muted">Fecha de creación del Proyecto</label>
         </div>
-        <div class="form-group pb-2">
-            <label for="gitP">Repositorio del proyecto</label>
-            <input type="text" class="form-control" id="gitP" name="gitP" [(ngModel)]="gitP">
+      
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="linkP" name="linkP" placeholder="Link del Proyecto" [(ngModel)]="linkP" required>
+            <label for="linkP"  class="text-muted">Link del Proyecto</label>
         </div>
-        <div class="form-group pb-2">
-            <label for="imgP">Imagen del proyecto</label>
-            <input type="text" class="form-control" id="imgP" name="imgP" [(ngModel)]="imgP">
-        </div> -->
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="gitP" name="gitP" placeholder="Git del Proyecto" [(ngModel)]="gitP" required>
+            <label for="gitP"  class="text-muted">Git del Proyecto</label>
+        </div>
+
+        <div class="form-floating pb-2">
+            <input type="text" class="form-control" id="imgP" name="imgP" placeholder="Imagen del Proyecto" [(ngModel)]="imgP" required>
+            <label for="imgP"  class="text-muted">Imagen del Proyecto</label>
+        </div>
+
         <button class="btn-medium py-2 px-3">
             Agregar Proyecto
         </button>
