--- a/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.html
@@ -3,27 +3,29 @@
     <h2 class="pb-2 border-bottom apartado">Experiencia</h2>
 
     <!--Contenedor de las Card de Educación-->
-    <div class="row px-0 mx-0 justify-content-center pt-3  justify-content-sm-start gap-2 abs-center">
+    <div class="row px-0 mx-0 justify-content-center pt-3  justify-content-sm-start gap-2 abs-center" >
 
         <!--Card iterada con For-->
-        <div class="col-12 col-sm-5 col-md-auto text-center card-trabajo p-3 d-grid align-content-center py-4" *ngFor="let Experiencia of expe">
+        <div class="col-12 col-sm-5 text-center card-trabajo p-2 pt-3 abs-center" *ngFor="let Experiencia of expe">
             
-            <h5 class="gtexto m-0">{{Experiencia.nombreE}}</h5>
-            
-            <p class="card-text texto text-center p-0 m-0">{{Experiencia.descripcionE}}</p>
-            <!-- <div class="card-text texto text-center p-0 m-0">{{Experiencia.fechaE}}</div> -->
-            <!-- <p class="card-text texto text-center pt-3 pb-0 align-self-end">{{Experiencia.imgE}}</p> -->
-            
-            <!--Botones Editar y Borrar-->
-            <div class="abs-center gap-1 pt-3" *ngIf="isLogged">
-                <button class="btn-medium  p-1 texto " routerLink="/editexp/{{Experiencia.id}}" >
-                    <i class="fa-regular fa-pen-to-square p-1"></i>Editar
-                </button>
-                <button class="btn-medium p-1  texto" (click)="delete(Experiencia.id)">
-                    <i class="fa-regular fa-trash-can p-1"></i>Borrar
-                </button>
-            </div>
+            <div class="d-block ">
+                <h5 class="gtexto m-0">{{Experiencia.nombreE}}</h5>
+                
+                <p class="card-text texto p-0 m-0 pt-1 text-break">{{Experiencia.descripcionE}}</p>
+                <div class="card-text texto p-0 m-0 pt-1">{{Experiencia.fechaE}}</div>
+                <!-- <p class="card-text texto text-center pt-3 pb-0 align-self-end">{{Experiencia.imgE}}</p> -->
+                
+                <!--Botones Editar y Borrar-->
+                <div class="abs-center gap-1 pt-3" *ngIf="isLogged">
+                    <button class="btn-medium  p-1 texto " routerLink="/editexp/{{Experiencia.id}}" >
+                        <i class="fa-regular fa-pen-to-square p-1"></i>Editar
+                    </button>
+                    <button class="btn-medium p-1  texto" (click)="delete(Experiencia.id)">
+                        <i class="fa-regular fa-trash-can p-1"></i>Borrar
+                    </button>
+                </div>
 
+            </div>
         </div>
     </div>  
 
