Ícono de Favicon, Sección Contacto, Botón descargar CV. Falta configurar la sección Inicio.

--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -27,6 +27,18 @@
                             <p>Usada en sección "404"</p>
                             <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-icons/404-error" title="404 error icons" >404 error icons created by Ghozi Muhtarom - Flaticon</a>
                         </li>  
+
+                        <li class="pb-3">
+                            <p class="subtitulo">Maletín</p>
+                            <p>Usado en el "favicon" de la página</p>
+                            <a class="credit-link" target="_blank" href="https://www.flaticon.com/free-icons/briefcase" title="briefcase icons">Briefcase icons created by Those Icons - Flaticon</a>
+                        </li>  
+
+                        <li class="pb-3">
+                            <p class="subtitulo">Información de Contacto</p>
+                            <p>Usada en la sección "Contacto"</p>
+                            <a class="credit-link" target="_blank" href="https://www.flaticon.com/free-stickers/contact-information" title="contact information stickers">Contact information stickers created by inipagistudio - Flaticon</a>
+                        </li> 
                     </ul>
                 </div>
     
