--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -13,3 +13,15 @@ input{
 .form-floating{
     padding-bottom: 0.5em;
 }
+
+.email:hover{
+    transition: 0.4s;
+    transform: scale(1.2);
+}
+.img-contact{
+    height: 40vh;
+}
+.email {
+    color:#fff;
+    text-shadow: 3px 1px 2px var(--magentaopaco);
+}
