--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,13 +2,27 @@
     <!-- Formulario -->
     <div class="container d-flex align-items-center px-0 justify-content-center contact-section  my-0 py-0">
 
-        <div class="col-10 col-sm-6 col-lg-5">
-            <!-- Título -->
-            <h2 class="apartado text-white text-shadow pb-3 pt-2 text-center">Contacto</h2>
+        <!-- <div class="col-10 col-sm-6 col-lg-5"> -->
+          
+        <div class="col abs-center">
+            <div class="row">
+                <div class="col p-0 m-0 fs-6 abs-center justify-content-lg-end pe-md-4 pb-4 pb-md-0">
+                    <div class="text-white text-center ">
+                        <h1 class="text-shadow pb-3 pt-2 text-center text-nowrap">¿Quieres trabajar juntos?</h1>
+                        <div class="div-email">
+                            <h2 class="text-hover text-shadow email animated-shadow">MariaMonchot@gmail.com</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col p-0 m-0 abs-center">
+                    <img src="assets\images\id-card.png" alt="" class="img-contact">
+                </div>
+            </div>
+
 
             <!-- Row -->
-            <div class="row p-0 m-0 fs-6">
-                <!-- Columnas Breakpoint 6 -->
+            <!-- <div class="row p-0 m-0 fs-6">
+                
                 <div class="col-12 form-floating">
                     <input  type="text" class="form-control " placeholder="Nombre" id="floatingInput">
                     <label for="floatingInput" class=" text-muted ps-4">Nombre</label>
@@ -17,7 +31,7 @@
                     <input  type="text" class="form-control  " placeholder="Asunto" id="floatingInput">
                     <label for="floatingInput" class="text-muted ps-4">Asunto</label>
                 </div>
-                 <!-- Columnas Breakpoint 12 -->
+                 
                 <div class="col-12 form-floating">
                     <input  type="email" class="form-control" id="floatingInput" placeholder="email@gmail.com">
                     <label for="floatingInput" class="text-muted  ps-4">email@gmail.com</label>
@@ -29,12 +43,14 @@
 
 
                 <div class="col-12 pt-2 d-flex justify-content-center">
-                    <!-- Botón de Envado-->
+                    
                     <button type="button" class="btn-medium p-2 px-4">
                     Enviar
                     </button>
                 </div>
-            </div>
+            </div> -->
+
+
         </div>  
     </div>
     
