--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="container text-center">
             
             <h1 class="pb-1 text-shadow text-white display-1 text-uppercase" id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
-            <h2 class="text-white apartado text-shadow pb-1 pb-md-2" id="titulo" >{{persona.titulo}}</h2>
+            <h2 class="text-white apartado text-shadow pb-1 pb-md-3" id="titulo" >{{persona.titulo}}</h2>
 
             <div *ngIf="isLogged" class="pb-2">
                 <button class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto" routerLink="/editAcercaDe/1" >
@@ -13,8 +13,9 @@
                 </button>
             </div>
            
-            <button type="button" class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto">Descargar CV</button>
-
+           <button type="button" class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto "> 
+              <a class="text-white" download="Curriculum Maria Monchot" href="assets/data/cv.pdf"> Descargar CV</a>
+           </button>
         </div>
 
     </div>
