Configuración provisoria del componente inicio, ng build.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,14 +7,14 @@
             <h1 class="pb-1 text-shadow text-white display-1 text-uppercase" id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
             <h2 class="text-white apartado text-shadow pb-1 pb-md-3" id="titulo" >{{persona.titulo}}</h2>
 
-            <div *ngIf="isLogged" class="pb-2">
+            <!-- <div *ngIf="isLogged" class="pb-2">
                 <button class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto" routerLink="/editAcercaDe/1" >
                     <i class="fa-regular fa-pen-to-square"></i>Editar Perfil
                 </button>
-            </div>
+            </div> -->
            
            <button type="button" class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto "> 
-              <a class="text-white" download="Curriculum Maria Monchot" href="assets/data/cv.pdf"> Descargar CV</a>
+              <a class="text-white" download="Curriculum Maria Monchot" href="assets/data/cv.pdf">Descargar CV</a>
            </button>
         </div>
 
